SPKMASTER-11957 - Fixes.